First try implementation: - added `abnf_core` package, implements ABNF core rules - added `abnf_def` package, implements ABNF definition rules - code, parser generator in `abnf_gen` package - cli app - readme

--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,7 @@
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
-.idea/**/shelf
+#.idea/**/shelf
 
 # AWS User-specific
 .idea/**/aws.xml
@@ -222,5 +222,9 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/windows,linux,macos,jetbrains+all,go,vim
 
 ### App ###
+*.prof
+*.pprof
 *.profile
+*.prof.*
+*.pprof.*
 *.profile.*
