--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,8 @@ on:
             - master
             - dev
 jobs:
-    build:
+    test:
+        name: Test
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
@@ -26,9 +27,31 @@ jobs:
             - name: Test
               run: make test
 
+            - uses: actions/upload-artifact@v3
+              with:
+                  name: coverage_profile
+                  path: ./cover.profile
+
+    report:
+        name: Report
+        runs-on: ubuntu-latest
+        needs: [test]
+        steps:
+            - uses: actions/checkout@v3
+
+            - name: Set up Go
+              uses: actions/setup-go@v3
+              with:
+                  go-version: 1.19
+
+            - name: Install
+              run: go install github.com/mattn/goveralls@latest
+
+            - uses: actions/download-artifact@v3
+              with:
+                  name: coverage_profile
+
             - name: Send coverage
               env:
                   COVERALLS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-              run: |
-                  go install github.com/mattn/goveralls@latest
-                  goveralls -coverprofile=./cover.profile -service=github
+              run: goveralls -coverprofile=./cover.profile -service=github
