--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,16 +10,33 @@ on:
             - master
             - dev
 jobs:
+    lint:
+        name: Lint
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
+
+            - name: Set up Go
+              uses: actions/setup-go@v5
+              with:
+                  go-version: '^1.22'
+
+            - name: Set up project
+              run: make setup
+
+            - name: Lint
+              run: make lint
+
     test:
         name: Test
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v3
+            - uses: actions/checkout@v4
 
             - name: Set up Go
-              uses: actions/setup-go@v3
+              uses: actions/setup-go@v5
               with:
-                  go-version: '1.22'
+                  go-version: '^1.22'
 
             - name: Set up project
               run: make setup
@@ -37,12 +54,12 @@ jobs:
         runs-on: ubuntu-latest
         needs: [test]
         steps:
-            - uses: actions/checkout@v3
+            - uses: actions/checkout@v4
 
             - name: Set up Go
-              uses: actions/setup-go@v3
+              uses: actions/setup-go@v5
               with:
-                  go-version: '1.20'
+                  go-version: '^1.22'
 
             - name: Install
               run: go install github.com/mattn/goveralls@latest
