--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,7 @@
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
-#.idea/**/shelf
+.idea/**/shelf
 
 # AWS User-specific
 .idea/**/aws.xml
