Work on #47 + generator output refactoring
abnf.Operator now is an alias of `func(input []byte, pos uint, nodes abnf.Nodes) (abnf.Nodes, error)`.
The new abnf.Rule alias is introduced that is `func(input []byte, nodes abnf.Nodes) (abnf.Nodes, error)`.
Go source generator format is changed to provide 2 global getter: Rules and Operators.
ABFN core and definition rules are rebilt with the new generator.

--- a/pkg/abnf_core/abnf.yml
+++ b/pkg/abnf_core/abnf.yml
@@ -5,5 +5,4 @@ inputs:
 package: abnf_core
 # output file path
 output: rules.go
-# on/off operators generation
-as_operators: true
+wrap_errs: true
