--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,6 +34,7 @@
     "go.lintTool": "golangci-lint-v2",
     "go.testExplorer.packageDisplayMode": "nested",
     "go.testFlags": [
+        "-race",
         "-vet=all",
         "-count=1",
     ],
