--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,5 +42,8 @@
     "go.vetFlags": [
         "-all"
     ],
-    "go.inlayHints.constantValues": true
+    "go.inlayHints.constantValues": true,
+    "gitlab.duoCodeSuggestions.enabled": false,
+    "gitlab.duoChat.enabled": false,
+    "gitlab.duoAgentPlatform.enabled": false
 }
